changed file architecture, added service status page

--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
 
             <div id="sidebarLandingShit">
                 <div class="sidebarSection">
-                    <a href="about.html" class="sbASection" id="sbAboutMe">about me</a>
+                    <a href="../about/index.html" class="sbASection" id="sbAboutMe">about me</a>
                 </div>
                 <div class="sidebarSection">
                     <a href="#" class="sbASection">projects</a>
@@ -33,7 +33,7 @@
                     <a href="#" class="sbASection">services</a>
                 </div>
                 <div class="sidebarSection">
-                    <a href="contacts.html" class="sbASection">contacts</a>
+                    <a href="../contacts/index.html" class="sbASection">contacts</a>
                 </div>
                 <div class="sidebarSection">
                     <a href="#" class="sbASection">blog</a>
@@ -54,7 +54,7 @@
                     <a href="#" class="sbASection">public data</a>
                 </div>
                 <div class="sidebarSection">
-                    <a href="#" class="sbASection">service status</a>
+                    <a href="../service_status/index.html" class="sbASection">service status</a>
                 </div>
             </div>
 
