--- a/contacts/index.html
+++ b/contacts/index.html
@@ -25,7 +25,7 @@
 
             <div id="sidebarLandingShit">
                 <div class="sidebarSection">
-                    <a href="about.html" class="sbASection">about me</a>
+                    <a href="../about/index.html" class="sbASection">about me</a>
                 </div>
                 <div class="sidebarSection">
                     <a href="#" class="sbASection">projects</a>
@@ -34,7 +34,7 @@
                     <a href="#" class="sbASection">services</a>
                 </div>
                 <div class="sidebarSection">
-                    <a href="#" class="sbASection" id="sbContacts">contacts</a>
+                    <a href="../contacts/index.html" class="sbASection" id="sbContacts">contacts</a>
                 </div>
                 <div class="sidebarSection">
                     <a href="#" class="sbASection">blog</a>
@@ -55,7 +55,7 @@
                     <a href="#" class="sbASection">public data</a>
                 </div>
                 <div class="sidebarSection">
-                    <a href="#" class="sbASection">service status</a>
+                    <a href="../service_status/index.html" class="sbASection">service status</a>
                 </div>
             </div>
 
