--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
             <div id="sidebarLandingShit">
                 <div class="sidebarSection">
-                    <a href="about.html" class="sbASection">about me</a>
+                    <a href="about/index.html" class="sbASection">about me</a>
                 </div>
                 <div class="sidebarSection">
                     <a href="#" class="sbASection">projects</a>
@@ -34,7 +34,7 @@
                     <a href="#" class="sbASection">services</a>
                 </div>
                 <div class="sidebarSection">
-                    <a href="contacts.html" class="sbASection">contacts</a>
+                    <a href="contacts/index.html" class="sbASection">contacts</a>
                 </div>
                 <div class="sidebarSection">
                     <a href="#" class="sbASection">blog</a>
@@ -55,7 +55,7 @@
                     <a href="#" class="sbASection">public data</a>
                 </div>
                 <div class="sidebarSection">
-                    <a href="#" class="sbASection">service status</a>
+                    <a href="service_status/index.html" class="sbASection">service status</a>
                 </div>
             </div>
 
@@ -65,7 +65,7 @@
 
             <div id="logoContainer">
                 <div id="logoImgContainer">
-                    <img src="../assets/img/personal_logo.png" alt="">
+                    <img src="./assets/img/personal_logo.png" alt="">
                 </div>
                 <div id="logoTextContainer">
                     Freelance Developer
@@ -75,14 +75,14 @@
             <div id="sectionLinks">
 
                 <div class="sLinkContainer">
-                    <a href="about.html">
+                    <a href="about/index.html">
                         <div class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                 <path
                                     d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z" />
                             </svg>
                         </div>
-                        <a href="about.html" class="sLink">About me</a>
+                        <a href="about/index.html" class="sLink">About me</a>
                     </a>
                 </div>
 
@@ -100,14 +100,14 @@
                 </div>
 
                 <div class="sLinkContainer">
-                    <a href="contacts.html">
+                    <a href="contacts/index.html">
                         <div id="k2" class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                 <path
                                     d="M464 64C490.5 64 512 85.49 512 112C512 127.1 504.9 141.3 492.8 150.4L275.2 313.6C263.8 322.1 248.2 322.1 236.8 313.6L19.2 150.4C7.113 141.3 0 127.1 0 112C0 85.49 21.49 64 48 64H464zM217.6 339.2C240.4 356.3 271.6 356.3 294.4 339.2L512 176V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V176L217.6 339.2z" />
                             </svg>
                         </div>
-                        <a href="contacts.html" class="sLink">Contacts</a>
+                        <a href="contacts/index.html" class="sLink">Contacts</a>
                     </a>
                 </div>
 
